# SFT_Qwen3-TTS-12Hz-1.7B-Base

./: .gitignore  AI_README.md  README.md  pyproject.toml
script/: dataset.py  ds.py  dsg.py  load_elaina.py  merge_all_checkpoints.py  sft_12hz_lora.py  test_cuda  test_epoch2.py  test_merged_models.py  test_models.py  tts_server.py  tts_webui.html
