[project]
name = "sft-qwen3-tts-12hz-1-7b-base"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pip>=24.0",
    "torch",
    "torchvision",
    "torchaudio",
    "transformers>=4.38.0",
    "accelerate",
    "peft",
    "trl",
    "bitsandbytes",
    "datasets",
    "librosa",
    "scipy>=1.10.0",
    "soundfile",
    "phonemizer-fork",
    "sentencepiece",
    "einops",
    "tensorboard",
    "matplotlib",
    "numpy>=1.24.0",
    "qwen-tts",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }
torchaudio = { index = "pytorch-cu130" }
